Loyalty Points Update

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,7 @@
 .sb-testMode{
     position: fixed;
-    left: 0;
-    right: 0;
+    right: 20px;
     bottom: 15px;
-    margin: 0 auto;
     max-width: 228px;
     background-color: rgba(0,0,0,.231);
     border-radius: 5px;
