--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <router-outlet></router-outlet>
 
 <div class="sb-testMode" *ngIf="testMode" (click)="openTestModeSpecs()">
-    <i class="fas fa-exclamation-triangle"></i><br/>
-    <span>TEST MODE</span>
+    <i class="fas fa-exclamation-triangle"></i> <span>TEST MODE</span>
 </div>
 
 <div class='spotbie-overlay-window d-flex flex-column align-items-center align-content-center justify-content-center' *ngIf="displayTestModeOptions">
