--- a/src/app/spotbie/map/map.component.html
+++ b/src/app/spotbie/map/map.component.html
@@ -326,11 +326,11 @@
                   {{ communityMember.name | truncateText:[20, '...'] }}
                 </h6>
 
-                <p style='font-size: .5rem; text-overflow: ellipsis; max-height: 30px' class='spotbie-text-gradient mt-2'>
+                <p style='font-size: .6rem; text-overflow: ellipsis; max-height: 30px' class='spotbie-text-gradient mt-2'>
                   {{ communityMember.description | truncateText:[20, '...'] }}
                 </p>
 
-                <p style='font-size: .5rem;' class="spotbie-text-gradient mt-2">
+                <p style='font-size: .6rem;' class="spotbie-text-gradient mt-2">
                   {{ communityMember.cleanCategories | truncateText:[20, '...']}}
                 </p>
 
@@ -487,7 +487,7 @@
       <div [ngClass]="getMapPromptMobileInnerWrapperClassOne()">
         <app-business-features (signUpEvent)="signUp()" (spawnCategoriesEvt)="spawnCategories($event)" *ngIf="isLoggedIn !== '1'"></app-business-features>
 
-        <app-business-dashboard *ngIf="isLoggedIn == '1'" #homeDashboard (openBusinessSettingsEvt)="openBusinessSettings()"></app-business-dashboard>
+        <app-business-dashboard *ngIf="isLoggedIn == '1'" #businessHomeDashboard (openBusinessSettingsEvt)="openBusinessSettings()"></app-business-dashboard>
       </div>
     </div>
 
@@ -502,7 +502,7 @@
         <app-user-dashboard
           *ngIf="isLoggedIn == '1'"
           (spawnCategoriesEvt)="spawnCategories($event)"
-          #homeDashboard></app-user-dashboard>
+          #userHomeDashboard></app-user-dashboard>
       </div>
     </div>
   </div>
