--- a/src/app/spotbie/spotbie-logged-in/redeemable/redeemable.component.html
+++ b/src/app/spotbie/spotbie-logged-in/redeemable/redeemable.component.html
@@ -1,105 +1,183 @@
 <div class='spotbie-overlay-window'>
-
-    <div class="mt-5" *ngIf="redeemList !== null">
-
-        <h6 class='spotbie-text-gradient text-uppercase mt-4 mb-3' *ngIf="redeemList.length > 0">REDEEMABLE HISTORY</h6>
-
-        <div class="card spotbie-redeemItem" *ngFor="let redeemItem of redeemList">
-            
+    <div class="nav">
+      <table>
+        <tr>
+          <td class="nav-item" (click)="switchTab('balance-list')" [ngStyle]="getBalanceListStyle()">
+            BALANCES
+          </td>
+          <td class="nav-item" (click)="switchTab('rewards')" [ngStyle]="getRewardsStyle()">
+            REWARDS
+          </td>
+          <td class="nav-item" (click)="switchTab('lpRedeemed')" [ngStyle]="getRedeemedStyle()">
+            REDEEMED
+          </td>
+          <td class="nav-item" (click)="switchTab('ledger')" [ngStyle]="getLedgerStyle()">
+            LEDGER
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="spotbie-redeemListWrapper" *ngIf="(rewards || lpRedeemed || ledger || showBalanceList)">
+        <div *ngIf="rewards">
+          <div class="card spotbie-redeemedItem" *ngFor="let redeemedItem of rewardList">
             <div class='card-header'>
-                
-                <span class='sb-text-light-green-gradient' *ngIf="!redeemItem.name">{{ redeemItem.username }}</span>
+              <span class='sb-text-light-green-gradient'>{{ redeemedItem.business.name }}</span>
 
-                <span class='sb-text-light-green-gradient text-uppercase' 
-                        *ngIf="redeemItem.name">{{ redeemItem.name }}</span>
-
+              <img *ngIf="redeemedItem.business.spotbie_user.user_type === 1" [src]="'assets/images/home_imgs/find-places-to-eat.svg'" />
+              <img *ngIf="redeemedItem.business.spotbie_user.user_type === 2" [src]="'assets/images/home_imgs/find-places-for-shopping.svg'" />
+              <img *ngIf="redeemedItem.business.spotbie_user.user_type === 3" [src]="'assets/images/home_imgs/find-events.svg'" />
             </div>
-            
-            <div class='card-body text-uppercase' *ngIf="!redeemItem.name">
 
-                <div class='mb-2' *ngIf="redeemItem.reward_image !== null">
-                    <img class="sb-rewardImage" [src]="redeemItem.reward_image" />
-                </div>
+            <div class='card-body text-uppercase'>
+              <div class='mb-2'>
+                <img class="sb-rewardImage" [src]="redeemedItem.reward.images" />
+              </div>
 
-                <div class='mb-2'>
-                    {{ redeemItem.updated_at | date:'mediumDate' }}
-                </div>
+              <div class='mb-2'>
+                <span class='sb-text-light-green-gradient'>{{ redeemedItem.reward.name }}</span>
+              </div>
 
-                <div class='mb-2'>
-                    Loyalty Points:
-                        <span *ngIf="redeemItem.redeemed == 1" class='sb-text-red-gradient'>-{{ redeemItem.amount | number:'1.1-2':'en-US' }}</span>
-                        <span *ngIf="redeemItem.redeemed != 1" class='spotbie-text-gradient'>{{ redeemItem.amount | number:'1.1-2':'en-US' }} (not redeemed)</span>
-                </div>      
+              <div class='mb-2'>
+                {{ redeemedItem.created_at | date:'mediumDate' }}
+              </div>
 
-                <div class='mb-2'>
-                    Customer Spent: <span class='sb-text-light-green-gradient'>${{ redeemItem.total_spent | number:'1.1-2':'en-US' }}</span>
-                </div>        
+              <div class='mb-2'>
+                Loyalty Points:
+                <span *ngIf="redeemedItem.redeemed === 1" class='sb-text-red-gradient'>-{{ redeemedItem.amount | number:'1.0':'en-US' }}</span>
+              </div>
 
-            </div>
-            
-            <div class='card-body text-uppercase' *ngIf="redeemItem.name">
-
-                <div class='mb-2' *ngIf="redeemItem.reward_name !== null">
-                    {{  redeemItem.reward_name }}
-                </div>
-
-                <div class='mb-2' *ngIf="redeemItem.reward_image !== null">
-                    <img class="sb-rewardImage" [src]="redeemItem.reward_image" />
-                </div>
-
-                <div class='mb-2'>
-                    {{ redeemItem.updated_at | date:'mediumDate' }}
-                </div>
-
-                <div class='mb-2' *ngIf="redeemItem.point_cost == null">
-                    Loyalty Points <span class='sb-text-light-green-gradient'>
-                        +{{ redeemItem.amount | number:'1.1-2':'en-US' }}
-                    </span>
-                </div>      
-                         
-                <div class='mb-2' *ngIf="redeemItem.point_cost == null">
-                    Total Spent <span class='sb-text-light-green-gradient'>${{ redeemItem.total_spent | number:'1.1-2':'en-US' }}</span>
-                </div>        
-                  
-                <div class='mb-2' *ngIf="redeemItem.point_cost !== null">
-                    LP Cost <span class='sb-text-light-green-gradient'>{{ redeemItem.point_cost | number:'1.0':'en-US' }}</span>
-                </div>
-
+              <div class='mb-2'>
+                Dollar Value:
+                <span class='sb-text-light-green-gradient'>${{ redeemedItem.dollar_value | number:'1.2':'en-US' }}</span>
+              </div>
             </div>
 
             <div class='card-footer text-uppercase text-center'>
-                award id: {{ redeemItem.uuid }}
+              award id: {{ redeemedItem.uuid }}
+            </div>
+          </div>
+        </div>
+
+        <div *ngIf="lpRedeemed">
+          <div class="card spotbie-redeemedItem" *ngFor="let redeemedItem of lpRedeemedList">
+            <div class='card-header'>
+              <span class='sb-text-light-green-gradient'>{{ redeemedItem.business.name }}</span>
+
+              <img *ngIf="redeemedItem.business.spotbie_user.user_type === 1" [src]="'assets/images/home_imgs/find-places-to-eat.svg'" />
+              <img *ngIf="redeemedItem.business.spotbie_user.user_type === 2" [src]="'assets/images/home_imgs/find-places-for-shopping.svg'" />
+              <img *ngIf="redeemedItem.business.spotbie_user.user_type === 3" [src]="'assets/images/home_imgs/find-events.svg'" />
             </div>
 
+            <div class='card-body text-uppercase'>
+              <div class='mb-2'>
+                {{ redeemedItem.created_at | date:'mediumDate' }}
+              </div>
+
+              <div class='mb-2'>
+                Loyalty Points <span class='sb-text-light-green-gradient'>
+                          +{{ redeemedItem.amount | number:'1.0':'en-US' }}
+                      </span>
+              </div>
+
+              <div class='mb-2'>
+                Total Spent <span class='sb-text-light-green-gradient'>${{ redeemedItem.total_spent | number:'1.2':'en-US' }}</span>
+              </div>
+
+              <div class='mb-2'>
+                Dollar Value <span class='sb-text-light-green-gradient'>${{ redeemedItem.dollar_value | number:'1.2':'en-US' }}</span>
+              </div>
+
+              <div class='mb-2'>
+                Reward Rate <span class='sb-text-light-green-gradient'>{{ redeemedItem.loyalty_point_dollar_percent_value | number:'1.2':'en-US' }}%</span>
+              </div>
+            </div>
+
+            <div class='card-footer text-uppercase text-center'>
+              award id: {{ redeemedItem.uuid }}
+            </div>
+          </div>
         </div>
 
-        <div class='spotbie-text-gradient mt-3 cursor-pointer' *ngIf="loadMoreRedeem" (click)="loadMoreRedeemPg()">
-            LOAD MORE
+        <div *ngIf="ledger">
+          <div class="card spotbie-redeemedItem" *ngFor="let legerRecord of lpLedgerList">
+            <div class='card-header'>
+              <span class='sb-text-light-green-gradient'>{{ legerRecord.business.name }}</span>
+
+              <img *ngIf="legerRecord.business.spotbie_user.user_type === 1" [src]="'assets/images/home_imgs/find-places-to-eat.svg'" />
+              <img *ngIf="legerRecord.business.spotbie_user.user_type === 2" [src]="'assets/images/home_imgs/find-places-for-shopping.svg'" />
+              <img *ngIf="legerRecord.business.spotbie_user.user_type === 3" [src]="'assets/images/home_imgs/find-events.svg'" />
+            </div>
+
+            <div class='card-body text-uppercase'>
+              <div class='mb-2'>
+                {{ legerRecord.created_at | date:'mediumDate' }}
+              </div>
+
+              <div class='mb-2'>
+                <span [ngClass]="getLpStyle(legerRecord.loyalty_amount)">
+                    {{ legerRecord.loyalty_amount | number:'1.0':'en-US' }}
+                </span> Loyalty Points
+              </div>
+            </div>
+
+            <div class='card-footer text-uppercase text-center'>
+              transaction id: {{ legerRecord.uuid }}
+            </div>
+          </div>
         </div>
 
-        <div class='spotbie-text-gradient mt-3 cursor-pointer' *ngIf="redeemList.length > 0" (click)="closeWindow()">
-            CLOSE
+        <div *ngIf="showBalanceList">
+          <div class="card spotbie-redeemedItem" *ngFor="let balance of balanceList">
+            <div class='card-header'>
+              <span class='sb-text-light-green-gradient'>{{ balance.from_business.name }}</span>
+
+              <img *ngIf="balance.from_business.spotbie_user.user_type === 1" [src]="'assets/images/home_imgs/find-places-to-eat.svg'" />
+              <img *ngIf="balance.from_business.spotbie_user.user_type === 2" [src]="'assets/images/home_imgs/find-places-for-shopping.svg'" />
+              <img *ngIf="balance.from_business.spotbie_user.user_type === 3" [src]="'assets/images/home_imgs/find-events.svg'" />
+            </div>
+
+            <div class='card-body text-uppercase'>
+              <div class='mb-2'>
+                <img class="sb-rewardImage" [src]="balance.from_business.photo" />
+              </div>
+
+              <div class='mb-2'>
+                  <span [ngClass]="getLpStyle(balance.balance)">
+                      {{ balance.balance | number:'1.0':'en-US' }}
+                  </span> Loyalty Points
+              </div>
+
+              <div class='mb-2'>
+                UPDATED AT {{ balance.updated_at | date:'mediumDate' }}
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class='spotbie-no-notis-box' *ngIf="redeemList.length === 0">
+        <div class='spotbie-text-gradient mt-3 cursor-pointer' *ngIf="showLoadMore()" (click)="loadMoreItems()">
+          LOAD MORE
+        </div>
 
+        <div class='spotbie-no-notis-box' *ngIf="((rewardList.length === 0 && rewards) ||
+                                                  (lpRedeemedList.length === 0 && lpRedeemed) ||
+                                                  (lpLedgerList.length === 0 && ledger) ||
+                                                  (balanceList.length === 0 && showBalanceList))">
             <i class="fas fa-exclamation-triangle"></i>
             <br/><br/>
             <p class="spotbie-text-gradient">
-                You have no redemeed points.
-            </p>    
+              <span *ngIf="balanceList.length === 0 && showBalanceList">You have not redeemed any points.</span>
+              <span *ngIf="rewardList.length === 0 && rewards">You have no redeemed rewards.</span>
+              <span *ngIf="lpRedeemedList.length === 0 && lpRedeemed">You have no redeemed points.</span>
+              <span *ngIf="lpLedgerList.length === 0 && ledger">You have no transaction history.</span>
+            </p>
             <br/><br/>
-            <div class='spotbie-text-gradient mt-4 cursor-pointer' (click)="closeWindow()">
-                CLOSE
+            <div class='spotbie-text-gradient mt-3 cursor-pointer' (click)="closeWindow()">
+              CLOSE
             </div>
-
         </div>
-
-
     </div>
 
     <div class='sb-closeButton' (click)="closeWindow()">
         <i class="fa fa-times"></i>
     </div>
-
 </div>
