--- a/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
+++ b/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
@@ -17,11 +17,11 @@
         </div>
 
         <p class="mt-4 mb-4" (click)="initBusinessLoyaltyPoints()">
-            <span [ngClass]="loyaltyPointsClass()" *ngIf="loyaltyPointBalance">
+            <span [ngClass]="loyaltyPointsClass()" *ngIf="userType === eAllowedAccountTypes.Personal">
                 {{ loyaltyPointBalance | number:'1.0':'en-US' }}
             </span>
 
-            <span [ngClass]="loyaltyPointsClass()" *ngIf="loyaltyPointBalanceBusiness">
+            <span [ngClass]="loyaltyPointsClass()" *ngIf="userType !== eAllowedAccountTypes.Personal">
                 {{ loyaltyPointBalanceBusiness.balance | number:'1.0':'en-US' }}
             </span>
 
