Redeemable menu changes.

--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.html
@@ -4,7 +4,7 @@
   <h4 id="sp-loyaltyMenuTitle" class="spotbie-text-gradient text-center text-uppercase mb-5">REWARD MENU</h4>
 
   <p class="spotbie-loyaltyMenuDescription spotbie-text-gradient text-center mt-2">
-    These are the rewards that your business will offer to the spotbie community.
+    These are the rewards that your business will offer to the SpotBie Community.
   </p>
 
   <div class='sb-menuItemWrapper'>
